[package]
name = "roblox_executor_proxy"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.24"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
futures-util = "0.3"
anyhow = "1.0"
bytes = "1.7"
